<resources>
    <string name="com.andretietz.retroauth.authentication.ACTION" translatable="false">@string/authentication_ACTION</string>
    <string name="authentication_ACTION" translatable="false">com.app.app.silverbarsapp.ACTION</string>
    <string name="authentication_ACCOUNT" translatable="false">com.app.app.silverbarsapp.ACCOUNT</string>
    <string name="authentication_USER" translatable="false">com.app.app.silverbarsapp.USER</string>
    <string name="authentication_TOKEN" translatable="false">com.app.app.silverbarsapp.TOKEN</string>
    <string name="app_name">Silverbars</string>
    <string name="menu_home">Home</string>
    <string name="menu_myworkouts">My workouts</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_progression">My progression</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <string name="search_hint">Search artist</string>
    <string name="content">Content</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="choose">Choose</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing emailcompletions."</string>
    <string name="facebook_app_id" translatable="false">183093092104411</string>
    <string name="fb_login_protocol_scheme" translatable="false">183093092104411</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="sign_in" translatable="false">False</string>
    <string name="rep_edit">Total of Repetitions</string>
    <string name="filtertitle">Workout filter</string>
    <string name="blank_text_my_workouts">THERE\'S NO WORKOUT YET</string>
    <string name="fragment_my_workouts_saved_empty">THERE\'S NO SAVED WORKOUTS YET</string>
    <string name="activity_create_workout_create_button">Create workout</string>
    <string name="explore_button">EXPLORE</string>
    <string name="clean_button_picker">Clean</string>
    <string name="ready_button_picker">OK</string>
    <string name="zero">0</string>
    <string name="set_text">SET</string>
    <string name="exercise_text">EXERCISE</string>
    <string name="pause_button">PAUSE WORKOUT</string>
    <string name="end_button">END WORKOUT</string>
    <string name="song_name">Song Name</string>
    <string name="artist_name">Artist name</string>
    <string name="number_five">5</string>
    <string name="get_ready_text">Get Ready!</string>
    <string name="number_sets_text">Number of Sets:</string>
    <string name="number_sets">5</string>
    <string name="rest_exercise_text">Rest between exercise:</string>
    <string name="rest_exercise">30s</string>
    <string name="rest_sets_text">Rest between Sets:</string>
    <string name="rest_sets">60s</string>
    <string name="vibration_rep_text">Activate vibration per rep</string>
    <string name="vibration_set_text">Activate vibration per set</string>
    <string name="tempo_text">Tempo in Reps</string>
    <string name="tempo_positive">3</string>
    <string name="tempo_isometric">1</string>
    <string name="tempo_negative">3</string>
    <string name="select_music_text">Select your music</string>
    <string name="exercises_text">Exercises</string>
    <string name="start_button">START</string>
    <string name="no_song">There\'s no song</string>
    <string name="workout_name">Workout Name</string>
    <string name="resume_workout_text">RESUME WORKOUT</string>
    <string name="pause_workout_text">PAUSE WORKOUT</string>
    <string name="rest_text">Rest</string>
    <string name="done_text">DONE</string>
    <string name="action_settings">Settings</string>
    <string name="set_edit">Total of Sets</string>
    <string name="rest_text_set">Rest between Set</string>
    <string name="tab_saved">Saved Workouts</string>
    <string name="tab_my_workouts">My Workouts</string>
    <string name="tab_workouts_home">Workouts</string>
    <string name="tab_myworkouts_home">My Workouts</string>
    <string name="tab_profile">Profile</string>
    <string-array name="navigation_array">
        <item>Workouts</item>
        <item>My Workouts</item>
        <item>Profile</item>
    </string-array>
    <string-array name="filter_items_text">
        <item>ALL</item>
        <item>ABS/CORE</item>
        <item>UPPER BODY</item>
        <item>LOWER BODY</item>
    </string-array>
    <string-array name="filter_items">
        <item>ALL</item>
        <item>ABS/CORE</item>
        <item>UPPER BODY</item>
        <item>LOWER BODY</item>
    </string-array>
    <string-array name="preference_values">
        <item>Twitter</item>
        <item>Google</item>
        <item>Instagram</item>
        <item>Facebook</item>
    </string-array>
    <string name="rest_text_exercise">Rest between Exercise</string>
    <string name="error_title_internet">No Internet connexion</string>
    <string name="error_message_internet">Please, Connect to Internet and try again</string>
    <string name="error_failure">The connection failed</string>
    <string name="error_message">Please, Connect and try again</string>
    <string name="reload">Reload</string>
    <string name="title_dialog">Do you want to finish the workout?</string>
    <string name="content_dialog">You \'ll lose the workout progress</string>
    <string name="positive_dialog">YES</string>
    <string name="negative_dialog">NO</string>
    <string name="create_text">Create new workout</string>
    <string name="music_selection">Select your music</string>
    <string name="progression_">My Progression</string>
    <string name="team">MY TEAMS</string>
    <string name="skill_progress">My Skill Progression</string>
    <string name="workout_shared">Workout Shared</string>
    <string name="history_workouts_done">My workouts done</string>
    <string name="muscles_involved">Muscles Involved</string>
    <string name="exercises_no_selected">You haven\'t selected any exercise</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="muscle_path" translatable="false">/</string>
    <string name="session_content">The session will end with your account and all data you have saved will be deleted</string>
    <string name="session_title">Do you want  to log out?</string>
    <string name="next">Next</string>
    <string name="empty_create">The Workout is empty :(</string>
    <string name="add_exercises_title">Add exercises</string>
    <string name="add_more">Add more exercises</string>
    <string name="songs">My Songs</string>
    <string name="spotify">Spotify</string>
    <string name="playlist">My Playlists</string>
    <string name="soundcloud">SoundCloud</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="STRENGTH">STRENGTH</string>
    <string name="CARDIO">CARDIO</string>
    <string name="ISOMETRIC">ISOMETRIC</string>
    <string name="PYLOMETRICS">PYLOMETRICS</string>
    <string name="spotify_playlist" translatable="false">""</string>
    <string name="spotify_token" translatable="false">""</string>
    <string name="save_workout">Save Workout</string>
    <string name="audio_exercise">Download audio of each exercise</string>
    <string name="only_premium">Only available for Premium users</string>
    <string name="premium">Only Premium</string>
    <string name="empty_playlist">There\'s no playlist</string>
    <string name="results">My Results</string>
    <string name="create_playlist">Create a new Playlist</string>
    <string name="title_playlist">Type the name of your playlist</string>
    <string name="cancel">Cancel</string>
    <string name="playlist_name">Playlist name</string>
    <string name="add_exercises_button">Add exercise to workout</string>
    <string name="level">Level</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="reps_value">1</string>
    <string name="exercise_adapter_option">Seconds</string>
    <string name="reps_text">Reps</string>
    <string name="slogan_login">Logging in to start training</string>
    <string name="slogan_silverbars">Be your own machine</string>
    <string name="working_out_reps">Reps</string>
    <string name="working_out_seconds">Seconds</string>
    <string name="myworkouts_fragment_saved">Saved workouts</string>
    <string name="myworkouts_fragment_myworkouts">My workouts</string>
    <string name="progress_fragment_daily">Daily</string>
    <string name="progress_fragment_weekly">Weekly</string>
    <string name="progress_fragment_monthly">Monthly</string>
    <string name="activity_create_workout_final_saving">Saving…</string>
    <string name="activity_exercise_list_empty">There\'s no more exercises:(</string>
    <string name="loading">Loading…</string>
    <string name="activity_workout_title">Workouts</string>
    <string name="activity_workout_dialog_title">Select your music</string>
    <string name="activity_muscle_selection_toolbar">Filter</string>
    <string name="activity_muscle_selection_title">Select the muscles that you want to train</string>
    <string name="activity_muscle_selection_exercises">Exercises</string>
    <string name="activity_muscle_selection_search">Search exercises</string>
    <string name="activity_muscle_selection_selection">Select which muscles</string>
    <string name="activity_results_title">Results</string>
    <string name="activity_results_saving">Saving…</string>
    <string name="activity_results_save">Save results</string>
    <string name="activity_results_sets">Sets completed:</string>
    <string name="activity_results_time">Total time of the workout:</string>
    <string name="activity_results_saved">Your results are saved!</string>
    <string name="activity_results_dialog_title">Save Results</string>
    <string name="activity_results_dialog_content">Are you sure that you want to lose your results?</string>
    <string name="activity_workingout_second">sec</string>
    <string name="activity_workingout_save">Save and continue</string>
    <string name="activity_workingout_total">Total time:</string>
    <string name="activity_workingout_review_rep">Repetitions completed:</string>
    <string name="activity_workingout_review_sec">Seconds completed:</string>
    <string name="activity_workingout_dialog_title">Finish workout</string>
    <string name="activity_workingout_dialog_content">Are you sure that you want to exit the workout?</string>
    <string name="fragment_profile_workout_done">My workouts done</string>
    <string name="fragment_progress_empty">You haven\'t train :(</string>
    <string name="fragment_progress_muscle_selection">Select which muscle to see progression</string>
    <string name="fragment_progress_okaybutton">Okay</string>
    <string name="activity_create_workout_deleted">Exercise deleted</string>
    <string name="activity_create_workout_restored">Exercise is restored!</string>
    <string name="activity_create_workout_undo">UNDO</string>
    <string name="activity_create_workout_final_workout_name_seleccion">Select your workout name</string>
    <string name="activity_create_workout_final_sets_seleccion">Select your sets</string>
    <string name="activity_create_workout_final_reps_seleccion">Select your reps or seconds</string>
    <string name="activity_user_preferences">Loading initial settings</string>
</resources>