<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:checked="true"
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_home_black_24px"
        android:title="@string/menu_myworkouts"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/my_workouts"
        android:title="@string/menu_progression"
        android:enabled="true"
        android:icon="@drawable/ic_apps_black_24px"
        app:showAsAction="ifRoom"/>


    <item android:id="@+id/my_progression"
        android:title="@string/menu_profile"
        android:enabled="true"
        android:icon="@drawable/ic_person_outline_black_24px"
        app:showAsAction="ifRoom"/>

</menu>