<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:id="@+id/error_view"
        android:visibility="gone">

        <TextView
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_failure"
            android:id="@+id/error_text"
            android:textSize="20sp"/>

        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/gray_active_icon"
            android:text="@string/error_message"/>

        <Button
            android:layout_gravity="center_horizontal"
            android:id="@+id/reload"
            android:text="@string/reload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/swipeContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



            <org.lucasr.twowayview.widget.TwoWayView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/list"
                android:paddingTop="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:twowayview_layoutManager="GridLayoutManager"
                app:twowayview_numColumns="2"
                android:orientation="vertical" />



    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>