<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:id="@+id/error_view">

        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/gray_active_icon"
            android:text="@string/error_message"/>

        <Button
            android:layout_gravity="center_horizontal"
            android:id="@+id/reload"
            android:text="@string/reload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:gravity="center_horizontal|center_vertical"
        android:id="@+id/loading"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/loading_text"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:text="@string/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <FrameLayout
            android:layout_above="@+id/container"
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:padding="12dp"
            android:background="@color/grey100"
            android:layout_alignParentBottom="true"
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.app.app.silverbarsapp.widgets.SeekbarWithIntervals
                android:id="@+id/seekbarWithIntervals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>