<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.proj.silverbarsapp.activities.SelectionMusicActivity"
    android:background="#fff">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="@color/colorPrimary" >

    </android.support.v7.widget.Toolbar>

<RelativeLayout
    android:gravity="center_vertical"
    android:layout_gravity="center_horizontal"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">
    <GridLayout
        android:id="@+id/gridlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="vertical"
        android:rowCount="2"
        android:useDefaultMargins="true">
        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="150dp"
            android:background="@color/colorPrimary"
            android:padding="10dp"
            android:gravity="center"
            android:id="@+id/songs"
            android:layout_height="200dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:alpha="0.8"
                android:id="@+id/img"
                android:contentDescription="Workout Name" />

            <TextView
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_centerVertical="true"
                android:text="@string/songs"
                android:textSize="18sp" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/spotify"
            android:orientation="vertical"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:gravity="center"
            android:background="@color/colorPrimary"
            android:padding="10dp">
                <ImageView
                    android:id="@+id/spotify_img"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/spotify48"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:layout_below="@+id/spotify_img"
                    android:id="@+id/title_spotify"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/spotify"
                    android:textSize="18sp" />
                <TextView
                    android:layout_below="@+id/title_spotify"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:textSize="14sp"
                    android:text="@string/premium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />




        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/playlist"
            android:orientation="vertical"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:gravity="center"
            android:background="@color/colorPrimary"
            android:padding="10dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="Workout Name" />
            <TextView
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_centerVertical="true"
                android:text="@string/playlist"
                android:textSize="18sp" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/soundcloud"
            android:orientation="vertical"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:gravity="center"
            android:background="@color/colorPrimary"
            android:padding="10dp">
            <ImageView
                android:id="@+id/soundcloud_img"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/soundcloud48"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_below="@+id/soundcloud_img"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_centerVertical="true"
                android:text="@string/soundcloud"
                android:textSize="18sp"
                android:id="@+id/title_soundcloud" />
            <TextView
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/title_soundcloud"
                android:layout_centerVertical="true"
                android:textSize="14sp"
                android:text="@string/coming_soon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </GridLayout>
</RelativeLayout>

</LinearLayout>
